--- a/theme_export__8b1cff-myshopify-com-datahyem__07APR2023-0516pm/sections/section_informative_all.liquid
+++ b/theme_export__8b1cff-myshopify-com-datahyem__07APR2023-0516pm/sections/section_informative_all.liquid
@@ -4,7 +4,7 @@
             <img src="img/Image.png" alt="">
             <div class="conteiner" >
                 <div class="content">
-                    <div class="informative_all_title">High quality ingredients
+                    <div class="informative_all_title">High quality ingredientsxxxxx
                     </div>
                     <p class="informative_all_text">Not to brag, but we don’t take shortcuts. We bring dried chickpeas in-house and soak them ourselves so that we can produce our homemade falafels and hummus using the most natural ingredients. Combine that with our fresh selection of bell peppers, lemons, red onions, and garlic cloves -- and you can taste the difference. We don’t cut corners, we cut fresh ingredients.</p>
                 </div>
